--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,7 +4,8 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Welcome!</h1>
-          <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p>
+          <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for
+            free.</p>
         </div>
       </div>
     </div>
@@ -44,7 +45,15 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
-                <input class="form-control" placeholder="Name" type="text">
+                <input class="form-control" placeholder="Name Address" type="text">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                </div>
+                <input class="form-control" placeholder="Date Of Birth" type="date">
               </div>
             </div>
             <div class="form-group">
@@ -62,8 +71,19 @@
                 </div>
                 <input class="form-control" placeholder="Password" type="password">
               </div>
+              <div class="text-muted font-italic"><small>password strength: <span
+                    class="text-success font-weight-700">strong</span></small></div>
             </div>
-            <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
+            <div class="form-group">
+              <div class="input-group input-group-alternative">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                </div>
+                <input class="form-control" placeholder="Confirm Password" type="password">
+              </div>
+              <div class="text-muted font-italic"><small>password strength: <span
+                    class="text-success font-weight-700">strong</span></small></div>
+            </div>
             <div class="row my-4">
               <div class="col-12">
                 <div class="custom-control custom-control-alternative custom-checkbox">
