--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,9 +7,9 @@
     </button>
     <!-- Brand -->
     <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/system-admin/dashboard']">
-      <img src="./assets/img/logo/learnifyapp.jpg" class="navbar-brand-img" alt="..." style="width: 300px; height: 500px;">
+      <img src="./assets/img/logo/learnifyapp.jpg" class="navbar-brand-img" alt="...">
     </a>
-    
+
     <!-- User -->
     <ul class="nav align-items-center d-md-none">
       <li class="nav-item" ngbDropdown placement="bottom-right">
