--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -13,7 +13,7 @@
               <h3 class="mb-0">Create/Update Category</h3>
             </div>
             <div class="col-4 text-right">
-              <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Back</a>
+              <a href="/#/system-admin/category" class="btn btn-sm btn-info mr-4">Back</a>
               <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
             </div>
           </div>
@@ -61,16 +61,14 @@
                     <label class="form-control-label" for="input-name">Name</label>
                     <input type="text" id="input-name" class="form-control form-control-alternative" placeholder="Name">
                   </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
+                  <div class="form-group">
                   <label class="form-control-label" for="input-status">Status</label>
                   <div class="control">
                     <label class="form-check-label mb-5">
                       <input type="checkbox" name="answer" [checked]="selectedStatus"> 
                     </label>
                   </div>
+                </div>
                 </div>
               </div>
             </div>
