--- a/src/app/pages/discount/list/discount.component.html
+++ b/src/app/pages/discount/list/discount.component.html
@@ -12,13 +12,13 @@
       <div class="col">
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0 mb-4">Category tables</h3>
             <div class="d-flex justify-content-between">
-              <div class="text-left">
-                <input type="text" placeholder="Tìm kiếm..." class="form-control" [style]="'with 30%'">
+              <div style="display: flex; align-items: center; gap: 10px;">
+                <input type="text" placeholder="Search..." class="form-control" style="flex: 1;">
+                <a href="#!" class="btn btn-info">Search</a>
               </div>
               <div class="text-right">
-                <a [routerLink]="'/system-admin/category/new'" class="btn btn-sm btn-primary">Thêm mới</a>
+                <a [routerLink]="'/system-admin/discount/new'" class="btn btn-sm btn-primary">Thêm mới</a>
               </div>
             </div>
           </div>
@@ -28,9 +28,10 @@
               <thead class="thead-light">
                 <tr>
                   <th scope="col">STT</th>
-                  <th scope="col">Tên</th>
-                  <th scope="col">Trạng thái</th>
-                  <th scope="col">Parent Id</th>
+                  <th scope="col">Code</th>
+                  <th scope="col">Percentage (%)</th>
+                  <th scope="col">Is Active</th>
+                  <th scope="col">Discount Course</th>
                   <th scope="col"></th>
                 </tr>
               </thead>
@@ -59,9 +60,9 @@
                         <i class="fas fa-ellipsis-v"></i>
                       </a>
                       <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                        <a class="dropdown-item" [routerLink]="'/system-admin/category/{id}/edit'"
+                        <a class="dropdown-item" [routerLink]="'/system-admin/discount/{id}/edit'"
                           href="javascript:void(0)">Xem</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Cập nhật</a>
+                        <a class="dropdown-item" routerLink="/system-admin/discount/new" href="javascript:void(0)">Cập nhật</a>
                         <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
                       </div>
                     </div>
