--- a/src/app/pages/discount/update/update.discount.component.html
+++ b/src/app/pages/discount/update/update.discount.component.html
@@ -1,70 +1,54 @@
-<p>update.discount works!</p>
 <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 200px; background-size: cover; background-position: center top;">
-    <!-- Mask -->
-    <span class="mask bg-gradient-danger opacity-8"></span>
-   
-  </div>
-  <div class="container-fluid mt--7">
-    
-      <div class="col-xl- order-xl-1">
-        <div class="card bg-secondary shadow">
-          <div class="card-header bg-white border-0">
-            <div class="row align-items-center">
-              <div class="col-8">
-                <h3 class="mb-0">Create/Update Category</h3>
-              </div>
-              <div class="col-4 text-right">
-                <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Back</a>
-                <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
-              </div>
+  <!-- Mask -->
+  <span class="mask bg-gradient-danger opacity-8"></span>
+ 
+</div>
+<div class="container-fluid mt--7">
+  
+    <div class="col-xl- order-xl-1">
+      <div class="card bg-secondary shadow">
+        <div class="card-header bg-white border-0">
+          <div class="row align-items-center">
+            <div class="col-8">
+              <h3 class="mb-0">Create/Update Discount</h3>
+            </div>
+            <div class="col-4 text-right">
+              <a href="/#/system-admin/discount" class="btn btn-sm btn-info mr-4">Back</a>
+              <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
             </div>
           </div>
-          <div class="card-body">
-            <form>
-              <div class="pl-lg-4">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-parentId">Parent ID</label>
-                      <select id="input-parentId" class="form-control" [(ngModel)]="selectedParentId">
-                        <option value="">Select Parent ID</option>
-                      </select>
-                    </div>                
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-categories">Categories</label>
-                      <select id="input-categories" class="form-control" [(ngModel)]="selectedCategory">
-                        <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-course">Course</label>
-                      <select id="input-course" class="form-control" [(ngModel)]="selectedCourse">
-                        <option *ngFor="let course of courses" [value]="course.id">{{ course.name }}</option>
-                      </select>
-                    </div>
-                  </div>
+        </div>
+        <div class="card-body">
+          <form>
+            <div class="pl-lg-4">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-discountCourse">Discount Course</label>
+                    <select id="discountCourse" class="form-control" [(ngModel)]="selectedDiscountCourse">
+                      <option value="">Select Discount Course</option>
+                    </select>
+                  </div>                
                 </div>
               </div>
-              <div class="pl-lg-4">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-id">ID</label>
-                      <input type="text" id="input-id" class="form-control form-control-alternative" placeholder="ID Category">
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-name">Name</label>
-                      <input type="text" id="input-name" class="form-control form-control-alternative" placeholder="Name">
-                    </div>
+            </div>
+            <div class="pl-lg-4">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-id">ID</label>
+                    <input type="text" id="input-id" class="form-control form-control-alternative" placeholder="ID Code">
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-code">Code</label>
+                    <input type="text" id="input-code" class="form-control form-control-alternative" placeholder="Code">
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-percentage">Percentage (%)</label>
+                    <input type="text" id="input-percentage" class="form-control form-control-alternative" placeholder="Percentage">
+                  </div>
                   <div class="form-group">
                     <label class="form-control-label" for="input-status">Status</label>
                     <div class="control">
@@ -75,8 +59,9 @@
                   </div>
                 </div>
               </div>
-            </form>
-          </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
+  </div>
