--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,13 +31,17 @@
           <div class=" dropdown-header noti-title">
             <h6 class="text-overflow m-0">Welcome!</h6>
           </div>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/login']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>Đăng nhập</span>
           </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/register']" class="dropdown-item">
             <i class="ni ni-settings-gear-65"></i>
-            <span>Thông tin</span>
+            <span>Register</span>
+          </a>
+          <a routerLinkActive="active" [routerLink]="['/system-admin/user-profile']" class="dropdown-item">
+            <i class="ni ni-settings-gear-65"></i>
+            <span>Thông tin cá nhân</span>
           </a>
           <div class="dropdown-divider"></div>
           <a href="" class="dropdown-item">
