--- a/src/app/pages/category/list/categories.component.html
+++ b/src/app/pages/category/list/categories.component.html
@@ -35,22 +35,21 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr *ngFor="let item of categories; let i = index;">
                 <th scope="row">
                   <div class="media align-items-center">
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Argon Design System</span>
+                      <span class="mb-0 text-sm">{{i + 1}}</span>
                     </div>
                   </div>
                 </th>
-                <td>
-                  Argon Design System
-                </td>
+                <td>{{ item.name }}</td>
                 <td>
                   <span class="badge badge-dot mr-4">
-                    <i class="bg-warning"></i> pending
+                    <i class="bg-success"></i> {{ item.isDelete ? 'Đã Xóa' : 'Hoạt động'}}
                   </span>
                 </td>
+                <td>{{ item.parentId }}</td>
                 <td>
                 </td>
                 <td class="text-right">
@@ -59,7 +58,7 @@
                       <i class="fas fa-ellipsis-v"></i>
                     </a>
                     <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" [routerLink]="'/system-admin/category/{id}/edit'"
+                      <a class="dropdown-item" [routerLink]="'/system-admin/category/{item.id}/edit'"
                         href="javascript:void(0)">Xem</a>
                       <a class="dropdown-item" href="javascript:void(0)">Cập nhật</a>
                       <a class="dropdown-item" href="javascript:void(0)">Xóa</a>
