DONE UX/Ui Payment and fix lại các field ở các màn hình

--- a/src/app/pages/lesson/update/update.lesson.component.html
+++ b/src/app/pages/lesson/update/update.lesson.component.html
@@ -87,13 +87,13 @@
               <div class="col-lg-6">
                 <div class="form-group">
                     <label class="form-control-label" for="input-note">Note :</label>
-                    <input type="text" id="input-note" class="form-control form-control-alternative" placeholder="Note">
+                    <textarea  type="text" id="input-note" class="form-control form-control-alternative" placeholder="Note"></textarea>
                   </div>
               </div>
               <div class="col-lg-6">
                 <div class="form-group">
                     <label class="form-control-label" for="input-comment">Comment :</label>
-                    <input type="text" id="input-comment" class="form-control form-control-alternative" placeholder="Comment">
+                    <textarea  type="text" id="input-comment" class="form-control form-control-alternative" placeholder="Comment"></textarea>
                   </div>
               </div>
             </div>
