--- a/src/app/pages/payment/update/update.component.html
+++ b/src/app/pages/payment/update/update.component.html
@@ -10,11 +10,11 @@
           <div class="card-header bg-white border-0">
             <div class="row align-items-center">
               <div class="col-8">
-                <h3 class="mb-0">Create/Update Course</h3>
+                <h3 class="mb-0">Create/Update payment</h3>
               </div>
               <div class="col-4 text-right">
-                <a href="/#/system-admin/course" class="btn btn-sm btn-info mr-4">Back</a>
-                <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
+                <a href="/#/system-admin/payment" class="btn btn-sm btn-info mr-4">Back</a>
+                <a class="btn btn-sm btn-default float-right">Save</a>
               </div>
             </div>
           </div>
@@ -32,26 +32,26 @@
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="input-title">Title :</label>
-                        <input type="text" id="input-title" class="form-control form-control-alternative" placeholder="Title">
+                        <label class="form-control-label" for="input-fullName">Full Name :</label>
+                        <input type="text" id="input-fullName" class="form-control form-control-alternative" placeholder="Full Name">
                       </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="input-price">Price :</label>
-                        <input type="text" id="input-price" class="form-control form-control-alternative" placeholder="Price">
+                        <label class="form-control-label" for="input-email">Email :</label>
+                        <input type="text" id="input-email" class="form-control form-control-alternative" placeholder="Email">
                       </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
-                        <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative" placeholder="Enrollment Count">
+                        <label class="form-control-label" for="input-phoneNumber">Phone Number :</label>
+                        <input type="text" id="input-phoneNumber" class="form-control form-control-alternative" placeholder="Phone Number">
                       </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="input-thumbnail">Thumbnail :</label>
-                        <input type="text" id="input-thumbnail" class="form-control form-control-alternative" placeholder="Thumbnail">
+                        <label class="form-control-label" for="input-address">Address :</label>
+                        <input type="text" id="input-address" class="form-control form-control-alternative" placeholder="Address">
                       </div>
                   </div>
                   <div class="col-lg-6">
@@ -62,27 +62,23 @@
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="input-categoryID">Category ID :</label>
-                        <input type="text" id="input-categoryID" class="form-control form-control-alternative" placeholder="Category ID">
+                        <label class="form-control-label" for="input-totalMoney">Total Money :</label>
+                        <input type="text" id="input-totalMoney" class="form-control form-control-alternative" placeholder="Total Money">
                       </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="input-description">Description :</label>
-                        <textarea  type="text" id="input-description" class="form-control form-control-alternative" placeholder="Description"></textarea>
+                        <label class="form-control-label" for="input-paymentMethod">Payment Method :</label>
+                        <input type="text" id="input-paymentMethod" class="form-control form-control-alternative" placeholder="Payment Method">
                       </div>
                   </div>
                   <div class="col-lg-12">
                     <div class="form-group">
-                    <label class="form-control-label" for="input-status">Status</label>
-                    <div class="control">
-                      <label class="form-check-label mb-5">
-                        <input type="checkbox" name="answer" [checked]="selectedStatus"> 
-                      </label>
-                        </div>
-                        </div>
+                        <label class="form-control-label" for="input-note">Note :</label>
+                        <textarea id="input-note" class="form-control form-control-alternative" placeholder="Note"></textarea>
                     </div>
-                 </div>
+                </div>                
+                </div>
                 </div>
             </form>
           </div>
