DONE fix UX/UI user profile

--- a/src/app/pages/lesson/update/update.lesson.component.html
+++ b/src/app/pages/lesson/update/update.lesson.component.html
@@ -37,13 +37,7 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <label class="form-control-label" for="input-section"
-                    >Section</label
-                  >
-                  <select
-                    id="section"
-                    class="form-control"
-                    [(ngModel)]="selectedSection"
-                  >
+                    >Section</label> <select id="section" class="form-control" [(ngModel)]="selectedSection">
                     <option value="">Select Section</option>
                   </select>
                 </div>
