--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -13,7 +13,7 @@
               <h3 class="mb-0">Create/Update Category</h3>
             </div>
             <div class="col-4 text-right">
-              <a href="/#/system-admin/category" class="btn btn-sm btn-info mr-4">Back</a>
+              <a [routerLink]="'system-admin/category'" class="btn btn-sm btn-info mr-4">Back</a>
               <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
             </div>
           </div>
