In-progress: CRUD User (pagination & search)

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
           </a>
           <a routerLinkActive="active" [routerLink]="['/register']" class="dropdown-item">
             <i class="ni ni-settings-gear-65"></i>
-            <span>Register</span>
+            <span>Đăng ký</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/system-admin/user-profile']" class="dropdown-item">
             <i class="ni ni-settings-gear-65"></i>
