--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -55,6 +55,9 @@
               </div>
             </div>
             <div class="form-group">
+              <div class="text-center text-muted">
+                <small>Quyền đăng nhập</small>
+              </div>
               <select class="d-flex align-items-center m-b-12"
                   [(ngModel)]="selectedRole" (change)="onRoleChange($event)" style="width: 100%; color: #333; background-color: #fff;">
                   <label class="d-flex align-items-center m-b-12"> Quyền đăng nhập </label>
