--- a/src/app/pages/user-profile/update/update.user-profile.component.html
+++ b/src/app/pages/user-profile/update/update.user-profile.component.html
@@ -78,7 +78,7 @@
                 <h3 class="mb-0">My account</h3>
               </div>
               <div class="col-4 text-right">
-                <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+                <a href="#!" class="btn btn-info">Lưu</a>
               </div>
             </div>
           </div>
@@ -89,28 +89,28 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-username">Username</label>
-                      <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                      <label class="form-control-label" for="input-username">Họ và tên</label>
+                      <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Họ và tên" value="">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-email">Email address</label>
-                      <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
+                      <label class="form-control-label" for="input-email">Email</label>
+                      <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="example@example.com">
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-first-name">First name</label>
-                      <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
+                      <label class="form-control-label" for="input-first-name">Số điện thoại</label>
+                      <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="+84 123456789" value="">
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-last-name">Last name</label>
-                      <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                      <label class="form-control-label" for="input-last-name">Ngày sinh</label>
+                      <input type="date" id="input-last-name" class="form-control form-control-alternative">
                     </div>
                   </div>
                 </div>
@@ -122,28 +122,28 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-address">Address</label>
-                      <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
+                      <label class="form-control-label" for="input-address">Địa chỉ</label>
+                      <input id="input-address" class="form-control form-control-alternative" placeholder="TP. Đà Nẵng, Việt Nam" value="" type="text">
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-lg-4">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-city">City</label>
-                      <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
+                      <label class="form-control-label" for="input-city">Thành phố</label>
+                      <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="Đà Nẵng" value="" disabled>
                     </div>
                   </div>
                   <div class="col-lg-4">
                     <div class="form-group">
-                      <label class="form-control-label" for="input-country">Country</label>
-                      <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
+                      <label class="form-control-label" for="input-country">Quốc gia</label>
+                      <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Việt Nam" value="" disabled>
                     </div>
                   </div>
                   <div class="col-lg-4">
                     <div class="form-group">
                       <label class="form-control-label" for="input-country">Postal code</label>
-                      <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
+                      <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="550000" disabled>
                     </div>
                   </div>
                 </div>
@@ -153,8 +153,8 @@
               <h6 class="heading-small text-muted mb-4">About me</h6>
               <div class="pl-lg-4">
                 <div class="form-group">
-                  <label>About Me</label>
-                  <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
+                  <label>Giới thiệu</label>
+                  <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ..."></textarea>
                 </div>
               </div>
             </form>
